<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_image_2026_04_23_at_17_11_02"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="163dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDescription" />

    <TextView
        android:id="@+id/txtWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="37dp"
        android:text="@string/welcome"
        android:textColor="#040404"
        app:layout_constraintBottom_toTopOf="@+id/btnDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnDescription"
        android:layout_width="305dp"
        android:layout_height="76dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="262dp"
        android:text="@string/this_app_was_designed_to_liet_users_like_you_be_sure_of_the_information_you_were_given_we_will_be_debunking_myths_that_are_spread_all_over_the_internet_are_you_ready"
        android:textAlignment="center"
        android:textColor="#0F0E0E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcom"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>